<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="325dp"
        android:layout_height="43dp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"

        android:text="@string/welcom"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="237dp"
        android:layout_height="37dp"

        android:gravity="center"
        android:text="@string/started"
        android:textColor="#D7000000"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonCreateAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonCreateAccount"

        android:layout_width="323dp"
        android:layout_height="52dp"
        android:layout_marginBottom="8dp"

        android:backgroundTint="#00807B"
        android:text="@string/create_account"
        android:textColor="#E5F0F0"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="#FFFFFF" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="323dp"
        android:layout_height="52dp"
        android:layout_marginBottom="48dp"
        android:backgroundTint="#E5F0F0"
        android:text="@string/login"
        android:textColor="#00807B"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="#FFFFFF" />

    <ImageView
        android:id="@+id/imageViewCircle"
        android:layout_width="300dp"
        android:layout_height="314dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/circle" />

    <ImageView
        android:id="@+id/imageViewWelcom"
        android:layout_width="353dp"
        android:layout_height="287dp"
        android:layout_marginTop="112dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageViewLogo"
        app:srcCompat="@drawable/welcom" />

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="284dp"
        android:layout_height="193dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageViewCircle"
        app:srcCompat="@drawable/logo_transparent" />

    <ImageView
        android:id="@+id/imageViewPlant"
        android:layout_width="102dp"
        android:layout_height="105dp"
        android:layout_marginBottom="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewWelcom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.857"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/plant" />


</androidx.constraintlayout.widget.ConstraintLayout>